1.0.7 pre-release